Bug 694318: remove reference to freed resource

When we're about to free a PDF resource object in pdfwrite, make sure we remove
references to it in the substream stack.

No cluster differences